--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,14 @@
   display: block;
   /*border: 1px solid #000;*/
 }
-
+#tabs{
+  margin-top: 30px;
+}
+.tabtreeclass{
+  width: 100%;
+  height: 300px;
+  display: block;
+}
 ul.treelist{
 	width: 100%;
 	list-style: none;
